例行依赖升级